<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<ScrollView
    android:layout_width="match_parent"
     android:layout_height="wrap_content" 
    android:id="@+id/sv1"
     android:fillViewport="true" >
	
	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical" >

	<LinearLayout 
	    android:id="@+id/llTitle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	   >
	<TextView
        android:id="@+id/txtViewCETitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:textSize="20dp" android:textStyle="bold"
        android:text="@string/TitleAddCustomerEvent" 
        android:layout_gravity="left"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp" />
       
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"/>
	</LinearLayout> 



	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="3"
	    android:layout_below="@id/llTitle" 
	    android:id="@+id/llStartTime">
  
 		<TextView
        android:id="@+id/txtViewST"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textSize="16dp" android:textStyle="bold"
        android:text="@string/StartTime" 
        android:layout_weight="1"/>

 		<EditText
 	    android:id="@+id/edStartTime"
 	    android:layout_width="0dp"
 	    android:layout_height="wrap_content"
        android:hint="@string/InputTime"
 	    android:layout_weight="2"/>
	
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="3" 
	    android:layout_below="@id/llStartTime"
	    android:id="@+id/llEventTitle">
		
       
		<TextView
	        android:id="@+id/txtViewETitle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textSize="16dp" android:textStyle="bold"
	        android:paddingLeft="10dp"
	        android:text="@string/EventTitle" 
	        android:layout_weight="1"/>
	 	<EditText
	          android:id="@+id/inputEventTitle"
	          android:layout_width="0dp"
	          android:layout_height="wrap_content"
	        
	          
	          android:layout_weight="2"
	          android:inputType="text"/>

 		
	
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="3" 
	    android:layout_below="@id/llEventTitle"
	    android:id="@+id/llEventDesc">
	
   
		<TextView
		   	android:id="@+id/txtViewEventDesc"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:textSize="16dp" 
		    android:textStyle="bold"
	        android:text="@string/EventDesc" 
	        android:paddingLeft="10dp"
	        android:layout_weight="1"/>
	        
	 	<EditText
	          android:id="@+id/inputEventDesc"
	          android:layout_width="0dp"
	          android:layout_height="wrap_content"
	           
	          android:layout_weight="2"
	           android:scrollbars="vertical"
        	 android:gravity="top"
	          
	          android:singleLine="false"
       
    	android:lines="3"/>

	 		
 	</LinearLayout>
	
	
	<LinearLayout 
	    android:id="@+id/ll5"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
   		android:orientation="horizontal"
   		android:layout_below="@id/llEventDesc">
	    

	    <Button
	        android:id="@+id/btnCESave"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/title_buttonEnter" 
	        android:layout_weight="1"/>
	    
	    <Button
	        android:id="@+id/btnCEDelete"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/title_buttonDelete" 
	        android:layout_weight="1"/>
	</LinearLayout>
	</LinearLayout>
</ScrollView>
</RelativeLayout>