<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowBreastUsage" >

    <com.androidplot.xy.XYPlot
            android:id="@+id/BUplot"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            androidPlot.title="@string/title_activity_show_breast_usage"
            androidPlot.domainLabel="@string/domainLabelDay"
            androidPlot.rangeLabel="@string/rangeLabelB"
            androidPlot.titleWidget.labelPaint.textSize="20dp"
             androidPlot.titleWidget.labelPaint.color="@color/chartTitle"
            androidPlot.domainLabelWidget.labelPaint.textSize="15dp "
            androidPlot.rangeLabelWidget.labelPaint.textSize="15dp"
            androidPlot.graphWidget.marginTop="0dp"
            androidPlot.graphWidget.marginLeft="15dp"
            androidPlot.graphWidget.marginBottom="30dp"
            androidPlot.graphWidget.marginRight="10dp"
            androidPlot.graphWidget.rangeLabelPaint.textSize="12dp"
            androidPlot.graphWidget.rangeOriginLabelPaint.textSize="12dp"
            androidPlot.graphWidget.domainLabelPaint.textSize="8dp"
            androidPlot.graphWidget.domainOriginLabelPaint.textSize="8dp"
           
            
            androidPlot.legendWidget.textPaint.textSize="25"
            androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
            androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
            androidPlot.legendWidget.heightMetric.value="25dp"
            androidPlot.legendWidget.widthMetric.value="0.7"
            androidPlot.legendWidget.positionMetrics.xPositionMetric.value="4"
            androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
            androidPlot.graphWidget.gridLinePaint.color="#ffb6e9b5"
			androidPlot.graphWidget.gridBackgroundPaint.color="@color/white"
	/>

</RelativeLayout>